@@ -1,3 +1,7 @@
+2010-01-31 S. Thiell <stephane.thiell@cea.fr>
+
+	* scripts/clush.py: Display uncompleted nodes on keyboard interrupt.
+
 2010-01-29 S. Thiell <stephane.thiell@cea.fr>
 
 	* scripts/clush.py: Return some error code when -S -u TIMEOUT is used
